# Technical_Trial_Sensor_Reader

./: .flake8  README.md  build.sh  environment.yml  pyproject.toml  requirements.txt  run.sh  test.sh
docker/: .env  Dockerfile  app_launch_arguments.env  compose.yaml  compose_all.yaml  compose_external_services.yaml
sensor_reader/: app.py  nats_client.py  sensor_reader.py
sensor_reader/data/: custom_types.py
sensor_reader/db/: db_client.py
tests/command/: app_command.py
tests/integration/: test_db_client.py  test_nats_client.py  test_sensor_reader.py
tests/mocks/: sensor_infrared.py
tests/unit/: test_db_client.py  test_nats_url.py
